feat: Resolvido erro no build pelo pacote sharp user: Fábio Ghizoni

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -23,7 +23,7 @@ const aboutMeClass = cn(
 
 <section id="about-me" class={aboutMeClass}>
   <div
-    class="absolute inset-0 -z-10 bg-gradient-to-tr from-indigo-500 via-purple-500 to-blue-500
+    class="absolute inset-0 -z-10 bg-linear-to-tr from-indigo-500 via-purple-500 to-blue-500
   dark:from-indigo-900 dark:via-purple-900 dark:to-blue-900 transition-colors ease-in-out duration-1000"
   >
   </div>
@@ -38,15 +38,14 @@ const aboutMeClass = cn(
       >
     </h2>
     <p class="bg-gray-default text-xl text-justify p-4 rounded-md">
-      Hello!! My name is Fábio, I'm {currentAge} years old, and I live in Manoel
-      Ribas, Paraná - Brazil. I'm a very curious guy who enjoys learning how everything
-      works. That's why I'm passionate about technology, which is a very broad and
-      interesting field. I'm a full-stack developer, creating intuitive and dynamic
-      interfaces with interactivity and accessibility. My main experience is in the
-      web, but I've also developed desktop and mobile applications. I graduated with
-      a degree in Systems Analysis and Development and am now seeking to learn more
-      about various technologies, such as Python, Kotlin, Swift, React Native, and
-      more.
+      Hello!! My name is Fábio, I'm {currentAge} years old, and I live in Manoel Ribas,
+      Paraná - Brazil. I'm a very curious guy who enjoys learning how everything works.
+      That's why I'm passionate about technology, which is a very broad and interesting
+      field. I'm a full-stack developer, creating intuitive and dynamic interfaces
+      with interactivity and accessibility. My main experience is in the web, but
+      I've also developed desktop and mobile applications. I graduated with a degree
+      in Systems Analysis and Development and am now seeking to learn more about various
+      technologies, such as Python, Kotlin, Swift, React Native, and more.
     </p>
   </div>
 </section>
