--- a/src/pages/admin/gradients.astro
+++ b/src/pages/admin/gradients.astro
@@ -1,6 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import NoiseBg from "../ui/NoiseBg.astro";
+export const prerender = false;
+import Layout from "../../layouts/Layout.astro";
+import NoiseBg from "../../ui/NoiseBg.astro";
 
 const description = `Page Gradients | Page for generating custom gradients with various colors and even a 
   noise effect.`;
