--- a/src/pages/routes.astro
+++ b/src/pages/routes.astro
@@ -1,32 +1,30 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import UnderlineButton from "../ui/UnderlineButton.astro";
 
 const files = import.meta.glob("/src/pages/**/*.{astro,md,mdx,jsx,tsx}", {
   eager: false,
 });
 
-const routes = Object.keys(files)
-  .map((p) => {
-    let path =
-      p
+const normalizeRoute = (file: string): string => {
+  return (
+    (
+      file
         .replace("/src/pages", "")
-        .replace(/index\.(astro|md|mdx|jsx|tsx)$/, "")
-        .replace(/\.(astro|md|mdx|jsx|tsx)$/, "") || "/";
+        .replace(/\/index\.(astro|md|mdx|jsx|tsx)$/, "")
+        .replace(/\.(astro|md|mdx|jsx|tsx)$/, "") || "/"
+    ).replace(/\/$/, "") || "/"
+  );
+};
 
-    if (path !== "/" && path.endsWith("/")) path = path.slice(0, -1);
+const priority = (path: string) => (path.startsWith("/components") ? 1 : 0);
 
-    return path;
-  })
-  .filter((r) => !["/404", "/500"].includes(r))
-  .sort((a, b) => a.length - b.length || a.localeCompare(b));
-
-const displayRoutes = routes.map((path) => ({
-  path,
-  name:
-    path === "/"
-      ? "Home"
-      : path.replace(/^\//, "").replace(/(^\w)/, (c) => c.toUpperCase()),
-}));
+const routes = Object.keys(files)
+  .map(normalizeRoute)
+  .sort(
+    (a, b) =>
+      priority(a) - priority(b) || a.length - b.length || a.localeCompare(b),
+  );
 
 const description = `Page Routes | Page listing all routes available on the website for easy navigation.`;
 ---
@@ -36,11 +34,18 @@ const description = `Page Routes | Page listing all routes available on the webs
   bodyClass="justify-center items-center"
   description={description}
 >
-  <ul translate="no" class="text-white">
+  <ul translate="no" class="text-2xl text-white font-space-grotesk">
     {
-      displayRoutes.map((r) => (
-        <li title={r.path}>
-          <a href={r.path}>{r.name}</a>
+      routes.map((path) => (
+        <li title={path}>
+          <UnderlineButton
+            href={path}
+            title={path}
+            variant="primary"
+            class="after:h-0.5 after:bg-white"
+          >
+            {path}
+          </UnderlineButton>
         </li>
       ))
     }
