--- a/src/ui/WhatsIcon.astro
+++ b/src/ui/WhatsIcon.astro
@@ -16,7 +16,7 @@ const {
 
 <svg
   id={name}
-  data-name={name}
+  data-icon={name}
   class={className}
   viewBox="0 0 17.87 17.88"
   xmlns="http://www.w3.org/2000/svg"
