--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,8 +2,6 @@
 import { calculateAge } from "../scripts/about-me";
 import cn from "../utils/cn";
 
-const currentAge = calculateAge("2005-05-30");
-
 const aboutMeClass = cn(
   `flex relative flex-col w-full h-fit min-h-screen justify-center items-center 
     gap-4 p-8 font-cascadia-code text-white`,
@@ -30,14 +28,15 @@ const aboutMeClass = cn(
       >
     </h2>
     <p class="bg-gray-default text-xl text-justify p-4 rounded-md">
-      Hello!! My name is Fábio, I'm {currentAge} years old, and I live in Manoel Ribas,
-      Paraná - Brazil. I'm a very curious guy who enjoys learning how everything works.
-      That's why I'm passionate about technology, which is a very broad and interesting
-      field. I'm a full-stack developer, creating intuitive and dynamic interfaces
-      with interactivity and accessibility. My main experience is in the web, but
-      I've also developed desktop and mobile applications. I graduated with a degree
-      in Systems Analysis and Development and am now seeking to learn more about various
-      technologies, such as Python, Kotlin, Swift, React Native, and more.
+      Hello!! My name is Fábio, I'm {calculateAge("2005-05-30")} years old, and I
+      live in Manoel Ribas, Paraná - Brazil. I'm a very curious guy who enjoys learning
+      how everything works. That's why I'm passionate about technology, which is a
+      very broad and interesting field. I'm a full-stack developer, creating intuitive
+      and dynamic interfaces with interactivity and accessibility. My main experience
+      is in the web, but I've also developed desktop and mobile applications. I graduated
+      with a degree in Systems Analysis and Development and am now seeking to learn
+      more about various technologies, such as Python, Kotlin, Swift, React Native,
+      and more.
     </p>
   </div>
 </section>
