--- a/src/components/CopyRight.astro
+++ b/src/components/CopyRight.astro
@@ -9,7 +9,7 @@ const anchorClass =
 
 <footer
   role="contentinfo"
-  class="flex w-full min-h-10 text-gray-default dark:text-white justify-center items-center mt-6 px-4 py-2"
+  class="flex w-full min-h-10 text-center text-gray-default dark:text-white justify-center items-center mt-6 px-4 py-2"
 >
   <p class="text-base md:text-lg font-space-grotesk">
     &copy; {date.getFullYear()}
