--- a/src/pages/qr/info.astro
+++ b/src/pages/qr/info.astro
@@ -13,7 +13,7 @@ const description = `Page QR Info | Information page about the QR Code generator
 
 <Layout
   title="QR Info | Fábio Ghizoni"
-  bodyClass="flex-row justify-center items-center"
+  bodyClass="flex-row max-w-8xl h-fit place-self-center justify-center items-center gap-x-4"
   description={description}
 >
   <section class="flex flex-col text-white gap-4">
@@ -24,7 +24,7 @@ const description = `Page QR Info | Information page about the QR Code generator
     <AboutQrCode />
   </section>
   <section
-    class="bg-gray-900 border border-gray-700 rounded-lg p-5 overflow-x-auto
+    class="min-w-xl bg-gray-900 border border-gray-700 rounded-lg p-5 overflow-x-auto
       hover:border-purple-blue/80 transition-colors ease-in-out duration-200"
   >
     <h2
