feat: Mudanças no middleware e em demais rotas.

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,6 @@
 ---
 import { calculateAge } from "../scripts/about-me";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 const aboutMeClass = cn(
   `flex relative flex-col w-full h-fit min-h-screen justify-center items-center 
