--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import ChristmasLights from "../ui/ChristmasLights.astro";
 import Menu from "../ui/Menu.astro";
 import SwitchLang from "../ui/SwitchLang.astro";
 import SwitchTheme from "../ui/SwitchTheme.astro";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 const alt = "Logo Fábio Ghizoni";
 const title = "Return to home page";
