--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import CopyRight from "../components/CopyRight.astro";
 import Header from "../components/Header.astro";
 import "../styles/globals.css";
 import Modal from "../ui/Modal.astro";
-import cn, { removeSpaces } from "../utils/cn";
+import cn, { removeSpaces } from "../utils";
 
 interface Props {
   lang?: string;
