--- a/src/ui/AsciiArts.astro
+++ b/src/ui/AsciiArts.astro
@@ -1,6 +1,6 @@
 ---
 import { bar, fabio } from "../scripts/ascii-arts/letters.ts";
-import cn from "../utils/cn";
+import cn from "../utils.ts";
 
 interface Props {
   class?: string;
