--- a/src/ui/Menu.astro
+++ b/src/ui/Menu.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import cn from "../utils/cn";
+import cn from "../utils";
 import UnderlineButton from "./UnderlineButton.astro";
 
 const ulClass = cn(
