--- a/src/ui/Modal.astro
+++ b/src/ui/Modal.astro
@@ -1,7 +1,7 @@
 ---
 export const prerender = false;
 import { Icon } from "astro-icon/components";
-import cn, { removeSpaces } from "../utils/cn";
+import cn, { removeSpaces } from "../utils";
 import SwitchLang from "./SwitchLang.astro";
 
 interface Props extends astroHTML.JSX.HTMLAttributes {
