--- a/src/ui/ScrollToTop.astro
+++ b/src/ui/ScrollToTop.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 const finalClass =
   cn(`fixed opacity-0 pointer-events-none w-12 h-12 bg-gray-default text-white right-4 bottom-4 border 
