--- a/src/ui/SwitchLang.astro
+++ b/src/ui/SwitchLang.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon/components";
 import { languages } from "../scripts/i18n/languages";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 interface Props {
   id?: string;
