--- a/src/ui/SwitchTheme.astro
+++ b/src/ui/SwitchTheme.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 const finalClass =
   cn(`relative hidden md:flex min-w-8 min-h-8 w-8 h-8 p-0.5 ml-auto justify-center items-center 
