--- a/src/ui/Technologies.astro
+++ b/src/ui/Technologies.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 import technologiesData, { duplicateTechnologies } from "../constants";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 interface Props {
   class?: string;
