--- a/src/ui/CircularLogo.astro
+++ b/src/ui/CircularLogo.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 interface Props extends astroHTML.JSX.HTMLAttributes {
   src?: string;
