--- a/src/ui/ListItem.astro
+++ b/src/ui/ListItem.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 interface Props {
   id?: string;
