--- a/src/ui/SocialButton.astro
+++ b/src/ui/SocialButton.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 import type { ComponentProps } from "astro/types";
 import WhatsIcon from "../ui/WhatsIcon.astro";
-import cn from "../utils/cn";
+import cn from "../utils";
 
 type Rel = astroHTML.JSX.AnchorHTMLAttributes["rel"];
 type Target = astroHTML.JSX.AnchorHTMLAttributes["target"];
